Widget-Modal: Fix blocked animation causing scrollbar to appear in centered case

--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -141,7 +141,8 @@
     }
 
     // Close is blocked animation
-    .modal.modal-blocked .modal-dialog {
+    .modal.modal-blocked .modal-content {
+        @include transition($modal-transition);
         transform: $modal-transform-blocked;
     }
 
